# trade-seek

./: .env.example  .gitignore  15_days_plan.md  DesignSystem.md  README.md  data_source.md  docker-compose.yml  package.json  plan.md  pytest.ini
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 202607140001_create_core_tables.py  202607150001_add_backtest_provider.py  202607160001_add_research_runs.py  202607180001_add_paper_trading.py  202607240001_add_waitlist_signups.py
apps/api/app/: celery_app.py  main.py
apps/api/app/api/: backtests.py  health.py  market_data.py  news.py  paper_trading.py  research.py
apps/api/app/core/: config.py  logging.py
apps/api/app/db/: session.py
apps/api/app/fixtures/market_data/: candles.csv  instruments.csv
apps/api/app/middleware/: request_id.py
apps/api/app/models/: __init__.py  ai_request_log.py  backtest_result.py  backtest_run.py  common.py  dev_user.py  instrument.py  ohlcv_candle.py  paper_trading.py  research_run.py  strategy_definition.py
apps/api/app/schemas/: backtesting.py  backtests.py  market_data.py  models.py  news.py  paper_trading.py  research.py
apps/api/app/services/: cache.py  database.py  news.py
apps/api/app/services/backtesting/: __init__.py  (+1 more)
apps/api/app/tasks/: __init__.py  backtests.py
apps/api/tests/: conftest.py  test_backtesting.py  test_backtests_api.py  test_health.py  test_llm_router.py  test_market_data.py  test_market_data_api.py  test_migrations.py  test_models.py  test_news.py  test_paper_trading_api.py  test_research_api.py
(+73 files in other folders)
