[project]
name = "algo-trading-api"
version = "0.1.0"
description = "FastAPI backend for the AI trading platform MVP."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0",
    "celery[redis]>=5.4.0",
    "fastapi>=0.115.0",
    "psycopg[binary]>=3.2.0",
    "pydantic-settings>=2.4.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0"
]

[tool.uv]
dev-dependencies = [
    "httpx>=0.27.0",
    "pytest>=8.3.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
